# encryption-project

./: .env  .gitignore  Cargo.toml
src/: DATABASE_DATA.env
src/receiver/: encryption_helper.rs  file_management.rs  main.rs
src/receiver/frontend/: index.html  main.css
src/reciever/: main.rs
src/sender/: encryption_helper.rs  file_management.rs  main.rs  test.txt
src/sender/frontend/: index.html  main.css
